# cirq_project

./: .gitignore  .gitmodules  .python-version
experiments/: pyproject.toml
experiments/src/experiments/: __init__.py  utils.py
experiments/src/experiments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
experiments/src/experiments/configs/: exp1_fid.yaml  exp2_ablation.yaml  exp2_fig2_rb_tau.yaml  exp2_interleaved_rb.yaml  exp2_rb.yaml  exp3.yaml
experiments/src/experiments/scripts/: __init__.py  exp1_fig1.py  exp1_postproc.py  exp1_postproc2.py  exp1_postproc3_fig1_multi_sigma.py  exp2_postproc_fig2_rb_tau_sweep.py  exp2_postproc_fig3_rb_multicurve.py  exp2_postproc_fig4_rb_stats_vs_tau.py  experiment1_fid.py  experiment2_rb.py  experiment3_easy.py
mynotebooks0416/: bench_exp1_mp.py  experiment_GHZ_test.py  learning.ipynb  run_exp1_mp_v0.1.py  run_exp1_mp_v0.2.py  run_exp2_ablation.py  run_exp2_fig2_rb_tau.py  run_exp2_rb_decay.py  script.ipynb  test.ipynb
